# patient-hospital-agents

./: .gitignore  README.md  pyproject.toml
backend/: README.md  pyproject.toml
backend/app/: main.py
backend/app/agents/: base.py  medrecon_agent.py  preintelligence_agent.py  prescription_structurer_agent.py  profiler_agent.py  questionnaire_agent.py  recovery_coach_agent.py  summary_agent.py  triage_gate_agent.py
backend/app/api/: deps.py  router.py
backend/app/api/v1/routes/: auth.py  coach.py  feedback.py  hospitals.py  ingestion.py  intelligence.py  medications.py  (+3 more)
backend/app/core/: config.py  logging.py  security.py
backend/app/db/: session.py
backend/app/models/: __init__.py  account.py  audit.py  coach.py  document.py  feedback.py  medication.py  patient.py  prescription.py  profile.py  summary.py  transcript.py  triage.py
backend/app/orchestration/: pipeline.py
backend/app/schemas/: audit.py  auth.py  coach.py  feedback.py  hospital.py  ingestion.py  intelligence.py  medication.py  patient.py  prescription.py  profile.py  questionnaire.py  triage.py
backend/app/services/: audit_log_service.py  hospital_mcp_service.py  ingestion_service.py  interaction_rules_service.py  medication_tracker_service.py  mock_hospitals.json  openai_client.py  patient_service.py  reminder_scheduler_service.py  transcription_service.py  tts_service.py
backend/app/utils/: files.py  json_schema.py  masking.py  passwords.py  safety.py
backend/docs/authentication/: README.md
backend/tests/: test_hospital_ranking.py  test_med_schedule.py  test_schema_validation.py
(+5 files in other folders)
